# chartplotter-kap

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build.yml
sdk/: README.md  chart_loader.hpp  chart_source.hpp  plugin_api.hpp  plugin_factory.hpp  projection.hpp  raster_chart_source.hpp
src/: kap_chart_source.cpp  kap_chart_source.hpp  kap_plugin.cpp  kap_plugin.hpp  kap_plugin.json  kap_plugin_factory.cpp  kap_reader.cpp  kap_reader.hpp
test/: test_kap.cpp
